--- a/index.html
+++ b/index.html
@@ -15,16 +15,20 @@
        </div>
 
        <div>
-
+<h1 id="trybewarts-header-title">Trybewarts</h1>
        </div>
 
        <div>
-
-       </div>
-
+<form class="trybewarts-login" action="">
+<input id="campoEmail" type="email" placeholder="Login" name="uname" required>
+<input id="campoSenha" type="password" placeholder="Senha" name="psw" required>
+<button onclick="alerta()">Logar</button>
+</form>
+</div>
        
-
     </header>
-    
+
+<script src="script.js"></script>
+
 </body>
 </html>
