Identaçoes 1 a 4 em andamento

--- a/index.html
+++ b/index.html
@@ -8,29 +8,22 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
     <header class="header">
-       <div>
-        <img src="images/trybewarts-header-logo.svg" alt="Logotipo Trybewarts">
-       </div>
-
-       <div>
-<h1 id="trybewarts-header-title">Trybewarts</h1>
-       </div>
-
-       <div>
-<form class="trybewarts-login" action="">
-<input id="campoEmail" type="email" placeholder="Login" name="uname" required>
-<input id="campoSenha" type="password" placeholder="Senha" name="psw" required>
-<button onclick="alerta()">Logar</button>
-</form>
-</div>
-       
+        <div>
+            <img class="trybewarts-header-logo" src="images/trybewarts-header-logo.svg" alt="Logotipo Trybewarts">
+        </div>
+        <div>
+            <h1 id="trybewarts-header-title">Trybewarts</h1>
+        </div>
+        <div>
+            <form class="trybewarts-login" action="">
+                <input id="campoEmail" type="email" placeholder="Login" name="uname" required>
+                <input id="campoSenha" type="password" placeholder="Senha" name="psw" required>
+                <button onclick="alerta()">Logar</button>
+            </form>
+        </div>
     </header>
 
 <script src="script.js"></script>
-
-
-
 </body>
 </html>
