--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <form class="trybewarts-login" action="">
                 <input id="campoEmail" type="email" placeholder="Login" name="uname" required>
                 <input id="campoSenha" type="password" placeholder="Senha" name="psw" required>
-                <button onclick="alerta()">Logar</button>
+                <button id="botao">Logar</button>
             </form>
         </div>
     </header>
