--- a/index.html
+++ b/index.html
@@ -9,20 +9,19 @@
 </head>
 <body>
     <header class="header">
-        <div>
-            <img class="trybewarts-header-logo" src="images/trybewarts-header-logo.svg" alt="Logotipo Trybewarts">
-        </div>
-        <div>
-            <h1 id="trybewarts-header-title">Trybewarts</h1>
-        </div>
-        <div>
-            <form class="trybewarts-login" action="">
-                <input id="campoEmail" type="email" placeholder="Login" name="uname" required>
-                <input id="campoSenha" type="password" placeholder="Senha" name="psw" required>
-                <button id="botao">Logar</button>
-            </form>
-        </div>
+        <img class="trybewarts-header-logo" src="images/trybewarts-header-logo.svg" alt="Logotipo Trybewarts">
+        <h1 id="trybewarts-header-title">Trybewarts</h1>
+        <form class="trybewarts-login" action="">
+            <input id="campoEmail" type="email" placeholder="Login" name="uname" required>
+            <input id="campoSenha" type="password" placeholder="Senha" name="psw" required>
+            <button id="botao">Logar</button>
+        </form>
     </header>
+    <main>
+        <form id="evaluation-form" action=""></form>
+
+
+    </main>
 <script src="script.js"></script>
 </body>
 </html>
