--- a/index.html
+++ b/index.html
@@ -1,27 +1,57 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Projeto Trybewarts</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <header class="header">
-        <img class="trybewarts-header-logo" src="images/trybewarts-header-logo.svg" alt="Logotipo Trybewarts">
-        <h1 id="trybewarts-header-title">Trybewarts</h1>
-        <form class="trybewarts-login" action="">
-            <input id="campoEmail" type="email" placeholder="Login" name="uname" required>
-            <input id="campoSenha" type="password" placeholder="Senha" name="psw" required>
-            <button id="botao">Logar</button>
-        </form>
+      <img
+        class="trybewarts-header-logo"
+        src="images/trybewarts-header-logo.svg"
+        alt="Logotipo-Trybewarts"
+      />
+      <h1 id="trybewarts-header-title">Trybewarts</h1>
+      <form class="trybewarts-login" action="">
+        <input
+          id="campoEmail"
+          type="email"
+          placeholder="Login"
+          name="uname"
+          required
+        />
+        <input
+          id="campoSenha"
+          type="password"
+          placeholder="Senha"
+          name="psw"
+          required
+        />
+        <button id="botao">Logar</button>
+      </form>
     </header>
     <main>
-        <form id="evaluation-form" action=""></form>
+      <form id="evaluation-form" action="">
+        <input id="input-name" type="text" placeholder="Nome" />
+        <input id="input-lastname" type="text" placeholder="Sobrenome" />
+        <input id="input-email" type="email" placeholder="Email" />
+        <select name="Casa" id="house">
+          <option value="Gitnória" id="gitnoria-house">Gitnória</option>
+          <option value="Reactpuff" id="reactpuff-house">Reactpuff</option>
+          <option value="Corvinode" id="corvinode-house">Corvinode</option>
+          <option value="Pytherina" id="pytherina-house">Pytherina</option>
+        </select>
+      </form>
 
-
+      <img
+        id="trybewarts-forms-logo"
+        src="images/trybewarts-colored.svg"
+        alt="Logotipo-Trybewarts"
+      />
     </main>
-<script src="script.js"></script>
-</body>
+    <script src="script.js"></script>
+  </body>
 </html>
