--- a/index.html
+++ b/index.html
@@ -35,15 +35,18 @@
     </header>
     <main>
       <form id="evaluation-form" action="">
-        <input id="input-name" type="text" placeholder="Nome" />
-        <input id="input-lastname" type="text" placeholder="Sobrenome" />
-        <input id="input-email" type="email" placeholder="Email" />
-        <select name="Casa" id="house">
-          <option value="Gitnória" id="gitnoria-house">Gitnória</option>
-          <option value="Reactpuff" id="reactpuff-house">Reactpuff</option>
-          <option value="Corvinode" id="corvinode-house">Corvinode</option>
-          <option value="Pytherina" id="pytherina-house">Pytherina</option>
-        </select>
+        <div id="input-form">
+          <input id="input-name" type="text" placeholder="Nome" />
+          <input id="input-lastname" type="text" placeholder="Sobrenome" />
+          <input id="input-email" type="email" placeholder="Email" />
+          <label for="Casa">Casa</label>
+          <select name="Casa" id="house">
+            <option value="Gitnória" id="gitnoria-house">Gitnória</option>
+            <option value="Reactpuff" id="reactpuff-house">Reactpuff</option>
+            <option value="Corvinode" id="corvinode-house">Corvinode</option>
+            <option value="Pytherina" id="pytherina-house">Pytherina</option>
+          </select>
+        </div>
       </form>
 
       <img
