--- a/index.html
+++ b/index.html
@@ -39,13 +39,28 @@
           <input id="input-name" type="text" placeholder="Nome" />
           <input id="input-lastname" type="text" placeholder="Sobrenome" />
           <input id="input-email" type="email" placeholder="Email" />
-          <label for="Casa">Casa</label>
+          <label for="Casa">Casa:</label>
           <select name="Casa" id="house">
             <option value="Gitnória" id="gitnoria-house">Gitnória</option>
             <option value="Reactpuff" id="reactpuff-house">Reactpuff</option>
             <option value="Corvinode" id="corvinode-house">Corvinode</option>
             <option value="Pytherina" id="pytherina-house">Pytherina</option>
           </select>
+        </div>
+        <hr>
+        <div>
+          <label id="label-family" for="family">Qual sua família?</label>
+          <p>
+          <input type="radio" name="family" id="frontend" value="Frontend">
+          <label for="frontend">Família Frontend</label>
+          </p>
+          <p>
+          <input type="radio" name="family" id="backend" value="Backend">
+          <label for="backend">Família Backend</label>
+          </p>
+          <input type="radio" name="family" id="fullstack" value="FullStack">
+          <label for="fullstack">Família FullStack</label>
+          </p>
         </div>
       </form>
 
