--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           </select>
         </div>
         <hr>
-        <div>
+        <div id="div-family">
           <label id="label-family" for="family">Qual sua família?</label>
           <p>
           <input type="radio" name="family" id="frontend" value="Frontend">
@@ -62,10 +62,8 @@
           <label for="fullstack">Família FullStack</label>
           </p>
         </div>
-        <div>
-          <p>
-            <label id="label-content" for="conteudo">Qual conteúdo você está com mais vontade de aprender?</label>
-          </p>
+        <div id="div-content">
+          <label id="label-content" for="conteudo">Qual conteúdo você está com mais vontade de aprender?</label>
           <input class="subject" type="checkbox" name="conteudo" id="HoFs" value="HoFs">
           <label for="HoFs">HoFs</label>
           <input class="subject" type="checkbox" name="conteudo" id="Jest" value="Jest">
@@ -78,6 +76,30 @@
           <label for="SQL">SQL</label>
           <input class="subject" type="checkbox" name="conteudo" id="Python" value="Python">
           <label for="Python">Python</label>
+        </div>
+        <hr>
+        <div id="div-rate">
+          <label id="label-rate" for="">Como você avalia a Trybewarts?</label>
+          <input type="radio" name="rate" id="1" value="1">
+          <label for="1">1</label>
+          <input type="radio" name="rate" id="2" value="2">
+          <label for="2">2</label>
+          <input type="radio" name="rate" id="3" value="3">
+          <label for="3">3</label>
+          <input type="radio" name="rate" id="4" value="4">
+          <label for="4">4</label>
+          <input type="radio" name="rate" id="5" value="5">
+          <label for="5">5</label>
+          <input type="radio" name="rate" id="6" value="6">
+          <label for="6">6</label>
+          <input type="radio" name="rate" id="7" value="7">
+          <label for="7">7</label>
+          <input type="radio" name="rate" id="8" value="8">
+          <label for="8">8</label>
+          <input type="radio" name="rate" id="9" value="9">
+          <label for="9">9</label>
+          <input type="radio" name="rate" id="10" value="10">
+          <label for="10">10</label>
         </div>
       </form>
 
