--- a/index.html
+++ b/index.html
@@ -101,6 +101,16 @@
           <input type="radio" name="rate" id="10" value="10">
           <label for="10">10</label>
         </div>
+        <br>
+        <div>
+          <label class="textarea" for="textarea">Deixe seu comentário:</label>
+          <br>
+          <textarea name="" id="textarea" cols="30" rows="5" maxlength="500"></textarea>
+        </div>
+        <div>
+          <label for="agreement" id="label-infos">Você concorda com o uso das informações acima?</label>
+          <input type="checkbox" name="" id="agreement">
+        </div>
       </form>
 
       <img
