--- a/index.html
+++ b/index.html
@@ -111,6 +111,9 @@
           <label for="agreement" id="label-infos">Você concorda com o uso das informações acima?</label>
           <input type="checkbox" name="" id="agreement">
         </div>
+        <div>
+          <button type="submit" id="submit-btn" disabled>Enviar</button>
+        </div>
       </form>
 
       <img
