--- a/index.html
+++ b/index.html
@@ -122,6 +122,9 @@
         alt="Logotipo-Trybewarts"
       />
     </main>
+    <footer>
+      <p>Direitos reservados à Trybewarts©</p>
+    </footer>
     <script src="script.js"></script>
   </body>
 </html>
