--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
           <label class="textarea" for="textarea">Deixe seu comentário:</label>
           <br>
           <textarea name="" id="textarea" cols="30" rows="5" maxlength="500"></textarea>
+            <p>Caracteres Restantes: <span id="counter">500</span></p>
         </div>
         <div>
           <label for="agreement" id="label-infos">Você concorda com o uso das informações acima?</label>
